[project]
name = "blog-analytics"
version = "0.1.0"
description = "Docusaurusブログの投稿統計グラフ生成ツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5",
    "vl-convert-python>=1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0",
]

[tool.uv]
package = false
exclude-newer = "2026-03-24T00:00:00Z" # 1週間前の日付を目安に手動更新
