[project]
name = "blog-analytics"
version = "0.1.0"
description = "Docusaurusブログの投稿統計グラフ生成ツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.1",
    "vl-convert-python>=1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.uv]
package = false
exclude-newer = "1 week"
